# multicenter-sepsis

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements_full.txt  requirements_minimal.txt
config/: cohorts.json  deep_feature_set.csv  features.json  master_splits.json  splits.json  variables.json  variables_list.csv  variables_list.xlsx  variables_list_w_snowmed.xlsx
datasets/: .gitignore  Makefile
r/: bp_analysis.R  compare_datasets.R  config.R  create_cohorts.R  create_dataset.R  cube.R  cube_analysis.R  cube_setup.R  cube_single.R  eicu_thresh.R  fold_analysis.R  glm.R  kolmogorov.R  meet-the-shapes.R  mini_cube.R  multi-abx.R  multi_folds.R  online-s3-label.R  patient-tbl.R  pts-tbl-helpers.R  score-plot.R  sep3-analysis.R  shape-vis.R  shape_analysis.R  si-comparison.R  targ_shape.R  treatement_vars.R  units-ranges.R  utils.R  variable-table.R
results/: hypersearch4_sklearn_results.csv
scripts/: add_best_values.py  aggregate_runs.py  analyze_feature_selection.py  calibrate_model_platt_isotonic.py  calibrate_model_temperature_scaling.py  check_splits.py  compute_decision_theory_statistics.py  csv_to_graph.py  eval_cohort_torch.sh  eval_pooled.sh  eval_sklearn.sh  eval_torch.sh  explore.py  extract_repetition.py  gather_baselines.py  gather_results.py  get_onsets.py  make_heatmap.py  map_model_to_result_files.py  peek.py  pool_predictions.sh  rank_shapley.sh  replicate_best_estimators.sh  run_baselines.sh  run_calibration.sh  run_lgbm.sh  run_lgbm_rep.sh  run_lr.sh  run_lr_rep.sh  run_pat_calibration.sh  run_preprocessing.sh  run_rnn.sh  (+17 more)
(+378 files in other folders)
