[tool.poetry]
name = "multicenter-sepsis"
version = "0.1.0"
description = ""
authors = ["Michael Moor <michael.moor@bsse.ethz.ch>, Max Horn <max.horn@bsse.ethz.ch>, Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "*"
ipykernel = "*"
tqdm = "*"
matplotlib = "*"
scikit-learn = "*"
numpy = "*"
torch = "==1.6.0"
lightgbm = "*"
pytorch-lightning = "==1.0.5"
dask = {extras = ["dataframe"], version = "*"}
distributed = "*"
dask-ml = "*"
pyarrow = "*"
seaborn = "*"
kymatio = "*"
plotille = "*"
iisignature = "*"
parquet-tools = "*"
simplejson = "*"
wandb = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
ipdb = "*"
ipython = "*"
bokeh = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# FIXME: these have been ported but at least the `tests` target is not
# fully supported by poetry yet.
[tool.poetry.scripts]
eval_torch = "src.torch.eval_model"
train_torch = "src.torch.train_model"
train_sklearn = "src.sklearn.main"
tests = "pytest tests"
